--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <form id="textAreaParent">
         <textarea id="inputNewTask" rows="2" cols="50">
         </textarea>
-        <input id="sumbitBtn" type="submit" value="Make new note">
+        <label id="sumbitLabel">
+            <input id="sumbitBtn" type="submit" value="New note">
+            <img id="paperPlane" src="paperPlane.png">
+        </label>
         <input id="dateInput" type="date" name="date" required>
         <input id="timeInput" type="time" name="time" required>
     </form>
