--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <title>My task board</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="loaderStyle.css">
     <link rel="icon" type="text/css" href="http://iconshow.me/media/images/Mixed/small-n-flat-icon/png2/512/-sticky-note.png">
+    <link rel="stylesheet" type="text/css" href="mobileStyle.css">
 </head>
 
 <body class="animate-bottom">
@@ -14,14 +16,14 @@
 		<img src="title.png">
 	</h1>
     <form id="textAreaParent">
-        <textarea id="inputNewTask" rows="2" cols="50">
+        <textarea id="inputNewTask" rows="2" cols="50" required>
         </textarea>
+        <input id="dateInput" type="date" name="date" required>
+        <input id="timeInput" type="time" name="time" required>
         <label id="sumbitLabel">
             <input id="sumbitBtn" type="submit" value="New note">
             <img id="paperPlane" src="paperPlane.png">
         </label>
-        <input id="dateInput" type="date" name="date" required>
-        <input id="timeInput" type="time" name="time" required>
     </form>
     <div id="noteParent">
     </div>
